# pyami_asterisk

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
pyami_asterisk/: __init__.py  action.py  client.py  event.py  utils.py
tests/: test_client.py
tests/fixtures/: actions.txt  actions_response.txt  coresettings.yaml  login_failed.yaml  login_ok.yaml
